src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root,
.light {
  --text-primary: #0c0c0c;
  --text-secondary: #767676;
  --background: #ffffff;
  --card: #f4f4f4;
  --inactive: #999999;
  --border: #18181820;
	--button: #EEEEEE;
}

.dark {
  --text-primary: #f5f5f5;
  --text-secondary: #cccccc;
  --background: #181818;
  --card: #282828;
  --inactive: #bbbbbb;
  --border: #f5f5f532;
	--button: #323232;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
}

body {
  margin: 0;
  font-family: "Inter", system-ui, sans-serif;
  @apply text-text-primary;
}

code {
  font-family: monospace;
}

.page-container {
  @apply flex flex-1 flex-col items-center justify-center w-full h-full bg-background;
}

.page-content {
  @apply h-full w-full flex flex-col items-center justify-center;
}

